--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <script src="Javascript/script.js"></script>
   <header>
     <div class="logo">
-      <img src="images/Screenshot 2022-12-10 at 19.00.13.png">
+      <img src="images/photo_2022-12-22 18.56.04.jpeg">
     </div>
 
   <div class="text-logo">
